package se.hkr.ood.domain;

public interface EnviromentalImpactCalculator {
    double calculate(Product product);
}
