package se.hkr.ood;

public class MaterialService {

}
